--- a/src/components/CarouselView.scss
+++ b/src/components/CarouselView.scss
@@ -3,6 +3,10 @@
 .carousel-container {
   display: block;
 
+  .carousel-header {
+    height: 60px;
+  }
+
   .carousel-root {
     display: block;
 
@@ -17,13 +21,17 @@
       // .slider-wrapper {
       // }
 
+      img {
+        opacity: 0.7;
+      }
       .animated {
         display: block;
         transition: all 0.4s ease-in-out;
-
         .ad {
           position: relative;
-          width: 100%;
+          // width: 100%;
+          background-color: black;
+          overflow: hidden;
           .ad_ment {
             height: 150px;
             display: flex;
@@ -62,7 +70,7 @@
   display: none;
 }
 
-@media screen and (min-width: 500px) and (max-width: 579px) {
+@media screen and (max-width: 630px) {
   .slider-wrapper {
     height: 250px;
   }
@@ -73,23 +81,23 @@
     display: none;
   }
 }
-@media screen and (min-width: 580px) and (max-width: 767px) {
-  .slider-wrapper {
-    height: 380px;
-  }
-}
+// @media screen and (min-width: 580px) and (max-width: 767px) {
+//   .slider-wrapper {
+//     height: 380px;
+//   }
+// }
 
-@media screen and (min-width: 768px) and (max-width: 991px) {
-  .slider-wrapper {
-    height: 500px;
-  }
-}
+// @media screen and (min-width: 768px) and (max-width: 991px) {
+//   .slider-wrapper {
+//     height: 500px;
+//   }
+// }
 
-@media screen and (min-width: 992px) and (max-width: 1079px) {
-  .slider-wrapper {
-    height: 600px;
-  }
-}
+// @media screen and (min-width: 992px) and (max-width: 1079px) {
+//   .slider-wrapper {
+//     height: 600px;
+//   }
+// }
 
 @media screen and (min-width: 1080px) {
   .carousel-slider {
@@ -101,42 +109,3 @@
     }
   }
 }
-// @media screen and (min-width: 480px) and (max-width: 767px) {
-//   // .carousel-root {
-//   //   height: 300px;
-//   // }
-//   .carousel-slider {
-//     display: block;
-//     overflow: hidden;
-//     height: 300px;
-//   }
-//   .ad_ment {
-//     height: 50px;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: flex-start;
-//     justify-content: space-evenly;
-//     gap: 12px;
-//     position: absolute;
-//     left: 10%;
-//     right: auto;
-//     bottom: 45%;
-//     text-align: left;
-//     padding-left: 2.5rem;
-//     padding-right: 2.5rem;
-
-//     .title {
-//       color: #fff;
-//       font-size: 24px;
-//       font-weight: bold;
-//     }
-//     .sub-title {
-//       color: #fff;
-//       font-size: 14px;
-//       font-weight: 500;
-//     }
-//   }
-//   .control-arrow {
-//     display: none;
-//   }
-// }
