--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,14 +1,21 @@
 @import "../variable.scss";
 
+.topHeader {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+}
+
 .header {
   width: 100vw;
   height: 64px;
   background: $main_color_l_01;
-  border: 1px solid #000;
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-shadow: $shadow;
+
+  position: absolute;
 
   .side {
     display: block;
@@ -43,6 +50,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-right: 12px;
     .header_icon {
       width: 22px;
       height: 22px;
