--- a/src/components/MainProduct.scss
+++ b/src/components/MainProduct.scss
@@ -32,6 +32,7 @@
       width: 220px;
       height: 300px;
       border: 1px solid $main_color_l_op;
+      background-color: #fff;
       border-radius: 6px;
       overflow: hidden;
       .item {
