--- a/src/components/MainSlide.scss
+++ b/src/components/MainSlide.scss
@@ -1,12 +1,16 @@
 @import "../variable.scss";
 
 .sider {
+  position: relative;
   .side-menu {
+    position: relative;
     // border: 1px solid red;
     width: 230px;
     height: 100vh;
-    background-color: #fff;
-    z-index: 3;
+    background-color: #62ebb9;
+    z-index: 5;
+    top: 0;
+    left: 0;
 
     .menu {
       display: flex;
